elements overlap fixed in game view before salvoes are placed

--- a/src/main/resources/static/web/styles.css
+++ b/src/main/resources/static/web/styles.css
@@ -22,7 +22,8 @@ background-size: 20px 20px;
 .container{
     display: grid;
     grid-template-columns: 0% 50% 0% 50% 0%;
-    grid-template-rows: 10% 10% 10% 30% 3% 30% 7%;
+    grid-template-rows: 76px 10% 10% 30% 3% 30% 7%;
+    height: 100%;
     
 }
 /*ALL GAMES*/
